--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,28 @@
 body {
-    background-color: var(--950);
-    color: var(--50);
+    background: linear-gradient(to right, var(--400), var(--50));
+    color: var(--950);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
 }
+
+/* Mobile-first design */
+.row {
+    width: 100vw;
+}
+
+.column {
+    width: 100%;
+    background-color: var(--200);
+}
+
+.themeToggle {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+}
+
+/* Media query for desktop */
